examples/test/testpolicy13667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13667
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key2: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value38
          key21: value8
      podSelector:
        matchLabels:
          key34: value35
          key12: value40
